# Linux-Container-Runtime

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  main.cpp
scripts/: fetch-rootfs.sh  test-harness.sh
src/: main.cpp
src/cgroups/: cgroups.cpp  cgroups.hpp
src/fs/: overlay.cpp  overlay.hpp  rootfs.cpp  rootfs.hpp
src/namespaces/: container.cpp  container.hpp
src/network/: network.cpp  network.hpp
src/registry/: registry.cpp  registry.hpp
